rename token to authToken and test require auth
